--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,13 @@
 name: build
 on:
+  # Trigger the workflow on a push to the main branch
   push:
     branches:
       - main
     paths:
       - gradle.properties
+  # Allow manual triggering of the workflow
+  workflow_dispatch:
 
 permissions:
   contents: write
